sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:18: error: not found: value chg
	} while(ecart > 1 || chg)
                             ^